[gd_scene load_steps=18 format=2]

[ext_resource path="res://Media/UI/Sprite-0005.png" type="Texture" id=1]
[ext_resource path="res://Media/UI/Sprite-0004.png" type="Texture" id=2]
[ext_resource path="res://Media/Resources/Minecraft.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Media/UI/Down_Arrow1.png" type="Texture" id=4]
[ext_resource path="res://Media/UI/Down_Arrow9.png" type="Texture" id=5]
[ext_resource path="res://Media/UI/Down_Arrow4.png" type="Texture" id=6]
[ext_resource path="res://Media/UI/Down_Arrow5.png" type="Texture" id=7]
[ext_resource path="res://Media/UI/Down_Arrow10.png" type="Texture" id=8]
[ext_resource path="res://Media/UI/Down_Arrow3.png" type="Texture" id=9]
[ext_resource path="res://Media/UI/Down_Arrow2.png" type="Texture" id=10]
[ext_resource path="res://Media/UI/Down_Arrow6.png" type="Texture" id=11]
[ext_resource path="res://Media/UI/Down_Arrow8.png" type="Texture" id=12]
[ext_resource path="res://Media/UI/Down_Arrow7.png" type="Texture" id=13]
[ext_resource path="res://UI/MessageBox.gd" type="Script" id=14]


[sub_resource type="DynamicFont" id=1]
size = 22
font_data = ExtResource( 3 )

[sub_resource type="AnimatedTexture" id=2]
frames = 11
fps = 15.0
frame_0/texture = ExtResource( 4 )
frame_1/delay_sec = 0.0
frame_2/texture = ExtResource( 10 )
frame_2/delay_sec = 0.0
frame_3/texture = ExtResource( 9 )
frame_3/delay_sec = 0.0
frame_4/texture = ExtResource( 6 )
frame_4/delay_sec = 0.0
frame_5/texture = ExtResource( 7 )
frame_5/delay_sec = 0.0
frame_6/texture = ExtResource( 11 )
frame_6/delay_sec = 0.0
frame_7/texture = ExtResource( 13 )
frame_7/delay_sec = 0.0
frame_8/texture = ExtResource( 12 )
frame_8/delay_sec = 0.0
frame_9/texture = ExtResource( 5 )
frame_9/delay_sec = 0.0
frame_10/texture = ExtResource( 8 )
frame_10/delay_sec = 0.0

[sub_resource type="DynamicFont" id=3]
size = 22
font_data = ExtResource( 3 )

[node name="MessageBoxBackground" type="TextureRect"]
margin_left = -400.0
margin_top = 125.0
margin_right = 404.0
margin_bottom = 300.0
texture = ExtResource( 2 )
script = ExtResource( 14 )

[node name="MessageBoxAttribBG" type="TextureRect" parent="."]
margin_left = 10.0
margin_top = -24.0
margin_right = 210.0
margin_bottom = 1.0
texture = ExtResource( 1 )

[node name="CharacterName" type="Label" parent="."]
margin_left = 19.0
margin_top = -19.0
margin_right = 201.0
margin_bottom = 4.0
custom_fonts/font = SubResource( 1 )
text = "Character Name"

[node name="Text" type="Label" parent="."]
margin_left = 8.0
margin_top = 8.0
margin_right = 792.0
margin_bottom = 164.0
custom_fonts/font = SubResource( 1 )
text = "Text"

[node name="MoveOnArrow" type="TextureRect" parent="."]
margin_left = 754.0
margin_top = 130.0
margin_right = 802.0
margin_bottom = 178.0
texture = SubResource( 2 )
stretch_mode = 1

[node name="ScreenBlot" type="ColorRect" parent="."]
margin_left = -91.0
margin_top = -519.0
margin_right = 900.0
margin_bottom = 403.0
color = Color( 0, 0, 0, 0.196078 )

[node name="ImageView" type="TextureRect" parent="ScreenBlot"]
margin_left = 139.0
margin_top = 74.0
margin_right = 839.0
margin_bottom = 624.0

[node name="InputFieldBG" type="TextureRect" parent="."]
margin_left = 300.0
margin_top = -271.0
margin_right = 500.0
margin_bottom = -231.0
texture = ExtResource( 1 )

[node name="InputFieldBG2" type="TextureRect" parent="InputFieldBG"]
margin_top = 25.0
margin_right = 200.0
margin_bottom = 65.0
texture = ExtResource( 1 )
flip_v = true

[node name="InputFieldText" type="Label" parent="InputFieldBG"]
margin_left = 10.0
margin_top = 14.0
margin_right = 66.0
margin_bottom = 37.0
custom_fonts/font = SubResource( 3 )
text = "Input"
